log
Thu 28 Mar 2024 04:14:43 AM UTC: 
 tests:  0|6
total_score: 0/70
d9bcae0
Thu 28 Mar 2024 04:19:39 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   Lista->size = 0;
      |        ^~
Compilation failed
69d7c47
Thu 28 Mar 2024 04:19:51 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
90467bc
Thu 28 Mar 2024 04:20:24 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
6dda887
Thu 28 Mar 2024 04:22:42 AM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
68e7ad6
Thu 28 Mar 2024 04:23:23 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
4c164eb
Thu 28 Mar 2024 04:26:00 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   Lista-> size = 0;
      |        ^~
list.c: In function ‘firstList’:
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e6fd590
Thu 28 Mar 2024 04:26:45 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1dc6a38
Thu 28 Mar 2024 04:28:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a8b946b
Thu 28 Mar 2024 04:28:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd99513
Thu 28 Mar 2024 04:28:48 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
444cd5a
Thu 28 Mar 2024 04:32:32 AM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7463949
Thu 28 Mar 2024 04:34:19 AM UTC: 
 list.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|0
b54a8b9
Thu 28 Mar 2024 04:35:21 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
af2e757
Thu 28 Mar 2024 04:35:41 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1e6be04
Thu 28 Mar 2024 04:36:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1b60dbc
Thu 28 Mar 2024 04:37:42 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
12ac66a
Thu 28 Mar 2024 04:39:03 AM UTC: 
 list.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 15/70
3e16c90
Thu 28 Mar 2024 04:39:59 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 15/70
bbee174
Thu 28 Mar 2024 04:41:49 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
78461f6
Thu 28 Mar 2024 04:46:55 AM UTC: 
 list.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  5|4
total_score: 25/70
e58b6b1
Thu 28 Mar 2024 04:48:28 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
49fdb0e
Thu 28 Mar 2024 04:49:19 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
6870e29
Thu 28 Mar 2024 04:50:58 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
f375a9b
Thu 28 Mar 2024 04:51:30 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
8514e62
Thu 28 Mar 2024 04:51:49 AM UTC: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  5|4
total_score: 25/70
f87f207
Thu 28 Mar 2024 04:53:04 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
bbc80a6
Thu 28 Mar 2024 04:55:18 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
6ec81b9
Thu 28 Mar 2024 04:55:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0420d0e
Thu 28 Mar 2024 04:55:39 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eb6ae22
Thu 28 Mar 2024 04:55:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0942014
Thu 28 Mar 2024 04:56:11 AM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
22e88d8
Thu 28 Mar 2024 04:57:05 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
60d575d
Thu 28 Mar 2024 04:57:22 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
d4107dc
Thu 28 Mar 2024 04:58:02 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
49982e3
